--- a/client/main.css
+++ b/client/main.css
@@ -9,10 +9,9 @@ div.navbar {
 	right: 0;
 	width: 100vw;
 	background-color: #777;
-	text-align: right;
+	text-align: left;
 	opacity:  0.75;
 	z-index: 1;
-	padding: 1vh;
 }
 div.pageContent{
 	position: absolute;
@@ -25,7 +24,7 @@ div.pageContent{
 	z-index: 0;
 	background-color: #eee;
 	opacity: 0.85;
-	box-shadow: 5px 5px 5px #000;
+	box-shadow: 5px 5px 5px #999;
 }
 div.subContent{
 	margin-left: 2vw;
@@ -69,7 +68,7 @@ a.button:hover{
 	text-decoration: underline;
 }
 a.button:visited{
-	transition: color  .42 ease;	
+	transition: color  .42 ease;
 	transition: text-decoration  .5 ease;
 }
 h1{
