--- a/client/main.css
+++ b/client/main.css
@@ -7,7 +7,7 @@ div.navbar {
 	position: fixed;
 	top: 0;
 	right: 0;
-	width: 100vw;
+	width: 100%;
 	background-color: #777;
 	text-align: left;
 	opacity:  0.75;
