--- a/client/main.css
+++ b/client/main.css
@@ -1,4 +1,3 @@
-
 /*http://krewn.github.io/fits.css*/
 div{
     content:tabindex("0");
@@ -8,9 +7,9 @@ div.navbar {
 	top: 0;
 	right: 0;
 	width: 100%;
-	background-color: #777;
+	background-color: #ddd;
 	text-align: left;
-	opacity:  0.75;
+	opacity:  0.325;
 	z-index: 1;
 }
 div.pageContent{
